2010-06-22  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs: make AssemblyRegistration delegate type internal
	so we can get at it from the Dispatcher code.

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* TemplateBindingExpression.cs: Rewrite TemplateBindings to
	  not be leaky. We have to be careful to not store a reference
	  to the template owner otherwise we end up with a reference
	  cycle and cannot ever GC the source or target of the
	  TemplateBinding.

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Clipboard.cs: Add missing null check on SetText

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Window.cs:
	* TextAlignment.cs:
	* WindowResizeEdge.cs:
	* DependencyObject.g.cs: Update to SL4 final API.

2010-06-16  Chris Toshok  <toshok@ximian.com>

	* Clipboard.cs: implement all this using our pal api.

2010-06-14  Chris Toshok  <toshok@ximian.com>

	* MessageBox.cs: track pal api changes.

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Remove confusing 'catch hack' for External
	CallersFromCrossDomain. Reduce duplication code when initializing
	the deployment. Add start/end boundaries for initializing some
	properties (so we can throw afterward).

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* Application.cs: Enable isolated storage increase

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* Application.cs: Install() now calls Install(false) - i.e.
	not unattended. Add, #ifdef out, quota increase for OOB apps

2010-06-03  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs: Tighten up the places where we emit
	  validation errors. Fixes some more of 232.

2010-06-02  Alan McGovern  <amcgovern@novell.com>

	* DependencyObjectCollection.cs:
	* PresentationFrameworkCollection.cs: use the new extension
	  method to raise the INCC event and remove old (duplicated)
	  boilerplate.

2010-06-02  Alan McGovern  <amcgovern@novell.com>
