@@ -1,3 +1,9 @@
+2010-06-24  Jackson Harper  <jackson@ximian.com>
+
+	* dependencyobject.cpp|h: Rename this function so it makes a
+	little more sense when being set in managed.
+	* xaml.cpp: Renamed the setname function.
+	
 2010-06-24  Alan McGovern  <amcgovern@novell.com>
 
 	* popup.h:
